<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.chan.chanweather.view.impl.SettingActivity"
    android:id="@+id/id_container">

    <android.support.v7.widget.Toolbar
        android:id="@+id/id_toolbar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorSetting"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        android:gravity="center_vertical"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextAppearance="@style/ToolbarTextStyle"
        android:theme="@style/SettingTheme">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorSetting"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:id="@+id/id_card"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="2dp"
                android:layout_marginRight="@dimen/setting_title_margin"
                android:layout_marginLeft="@dimen/setting_title_margin">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">
                    <TableRow android:gravity="center_vertical">
                        <ImageView android:layout_height="45dp"
                            android:layout_width="45dp"
                            android:src="@mipmap/ic_launcher"/>
                        <TextView android:text="@string/app_name"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:textColor="@color/colorSetting"/>
                    </TableRow>


                    <TableRow android:gravity="center_vertical">
                        <TextView android:text="@string/version_label"
                            android:textSize="@dimen/setting_title_size"/>
                        <TextView android:text="@string/app_version"
                                  android:padding="@dimen/setting_h_margin"/>
                    </TableRow>
                    <TableRow android:gravity="center_vertical">
                        <TextView
                            android:text="@string/author_label"
                            android:textSize="@dimen/setting_title_size"/>
                        <TextView android:text="chan"
                                  android:padding="@dimen/setting_h_margin"/>
                    </TableRow>
                </TableLayout>
            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/id_card"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="3dp"
                    card_view:cardElevation="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/local_label"
                            android:paddingBottom="4dp"
                            android:textColor="@color/colorSetting"/>

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:stretchColumns="1"
                            android:padding="@dimen/setting_v_margin">
                            <TableRow android:gravity="center_vertical">
                                <TextView android:text="@string/province_label"
                                          android:layout_height="@dimen/item_setting_height"
                                          android:gravity="center"/>
                                <android.support.v7.widget.AppCompatSpinner
                                    android:id="@+id/id_province_spinner"
                                    android:layout_width="@dimen/item_spinner_width"/>
                            </TableRow>
                            <TableRow>
                                <TextView android:text="@string/city_label"
                                          android:layout_height="@dimen/item_setting_height"
                                          android:gravity="center"/>
                                <android.support.v7.widget.AppCompatSpinner
                                    android:id="@+id/id_city_spinner"
                                    android:layout_width="@dimen/item_spinner_width"/>
                            </TableRow>
                        </TableLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="3dp"
                    card_view:cardElevation="1dp"
                    android:layout_marginTop="@dimen/setting_h_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/data_label"
                            android:paddingBottom="4dp"
                            android:textColor="@color/colorSetting"/>

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:stretchColumns="1"
                            android:padding="@dimen/setting_v_margin">
                            <TableRow android:gravity="center_vertical"
                                android:id="@+id/id_clear_data">
                                <TextView android:text="@string/clear_cache"
                                          android:layout_height="@dimen/item_setting_height"
                                          android:gravity="center"/>
                            </TableRow>
                        </TableLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="3dp"
                    card_view:cardElevation="1dp"
                    android:layout_marginTop="@dimen/setting_h_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_label"
                            android:paddingBottom="4dp"
                            android:textColor="@color/colorSetting"/>

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:stretchColumns="1"
                            android:padding="@dimen/setting_v_margin">
                            <TableRow android:gravity="center_vertical"
                                      android:id="@+id/id_about">
                                <TextView android:text="@string/about_us"
                                          android:layout_height="@dimen/item_setting_height"
                                          android:gravity="center"/>
                            </TableRow>
                        </TableLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
